<resources>
    <string name="app_name">নূর</string>
    <string name="map_key" translatable="false">AIzaSyDZp4Om8x8i6UQDfyXMGERlt8pyNgddhFE</string>
    <string-array name="bd_divisions">
        <item>ঢাকা (Dhaka)</item>
        <item>বরিশাল (Barisal)</item>
        <item>চট্টগ্রাম (Chittagong)</item>
        <item>সিলেট (Sylhet)</item>
        <item>রংপুর (Rangpur)</item>
        <item>রাজশাহী (Rajshahi)</item>
        <item>খুলনা (Khulna)</item>
        <item>ময়মনসিংহ (Mymensingh)</item>
    </string-array>
    <string-array name="bd_districts">
        <item>নির্বাচন করুন</item>
        <item>বরগুনা</item>
        <item>বরিশাল</item>
        <item>ভোলা</item>
        <item>ঝালকাঠি</item>
        <item>পটুয়াখালী</item>
        <item>পিরোজপুর</item>
        <item>বান্দরবান</item>
        <item>ব্রাহ্মণবাড়িয়া</item>
        <item>চাঁদপুর</item>
        <item>চট্টগ্রাম</item>
        <item>কুমিল্লা</item>
        <item>কক্সবাজার</item>
        <item>ফেনী</item>
        <item>খাগড়াছড়ি</item>
        <item>লক্ষ্মীপুর</item>
        <item>রাঙ্গামাটি</item>
        <item>ঢাকা</item>
        <item>ফরিদপুর</item>
        <item>গাজীপুর</item>
        <item>গোপালগঞ্জ</item>
        <item>কিশোরগঞ্জ</item>
        <item>মাদারীপুর</item>
        <item>মানিকগঞ্জ</item>
        <item>মুন্সীগঞ্জ</item>
        <item>নারায়ণগঞ্জ</item>
        <item>নরসিংদী</item>
        <item>রাজবাড়ী</item>
        <item>শরীয়তপুর</item>
        <item>টাঙ্গাইল</item>
        <item>বাগেরহাট</item>
        <item>চুয়াডাঙ্গা</item>
        <item>যশোর</item>
        <item>ঝিনাইদহ</item>
        <item>খুলনা</item>
        <item>কুষ্টিয়া</item>
        <item>মাগুরা</item>
        <item>মেহেরপুর</item>
        <item>নড়াইল</item>
        <item>সাতক্ষীরা</item>
        <item>জামালপুর</item>
        <item>ময়মনসিংহ</item>
        <item>নেত্রকোণা</item>
        <item>শেরপুর</item>
        <item>বগুড়া</item>
        <item>জয়পুরহাট</item>
        <item>নওগাঁ</item>
        <item>নাটোর</item>
        <item>চাঁপাইনবাবগঞ্জ</item>
        <item>পাবনা</item>
        <item>রাজশাহী</item>
        <item>সিরাজগঞ্জ</item>
        <item>দিনাজপুর</item>
        <item>গাইবান্ধা</item>
        <item>কুড়িগ্রাম</item>
        <item>লালমনিরহাট</item>
        <item>নীলফামারী</item>
        <item>পঞ্চগড়</item>
        <item>রংপুর</item>
        <item>ঠাকুরগাঁও</item>
        <item>হবিগঞ্জ</item>
        <item>মৌলভীবাজার</item>
        <item>সুনামগঞ্জ</item>
        <item>সিলেট</item>
    </string-array>
    <string name="text_good_morning">শুভ সকাল</string>
    <string name="text_good_afternoon">শুভ অপরাহ্ন</string>
    <string name="text_good_evening">শুভ সন্ধ্যা</string>
    <string name="text_good_night">শুভ রাত্রি</string>
    <string name="text_namaz_dak">নামাজের ডাক</string>
    <string name="txt_read_surah">সূরাটি পড়ুন</string>
    <string name="txt_share">শেয়ার</string>
    <string name="txt_am">AM</string>
    <string name="txt_pm">PM</string>
    <string name="tct_next_prayer">পরবর্তী প্রার্থনা</string>
    <string name="tct_next_prayer_robi">পরবর্তী নামাজ</string>
    <string name="txt_fajr">ফযর</string>
    <string name="txt_johr">জোহর</string>
    <string name="txt_asr">আসর</string>
    <string name="txt_magrib">মাগরিব</string>
    <string name="txt_esha">ইশা</string>
    <string name="txt_title_inspiration">ইসলামের অনুপ্রেরণা</string>
    <string name="txt_more_inspiration">আরও ইসলামের অনুপ্রেরণা</string>
    <string name="txt_title_scholar_video">স্কলার ভিডিও</string>
    <string name="txt_learn_more">আরও জানুন</string>
    <string name="txt_title_quran_learn">২৭ ঘন্টায় কুরআন শিখুন</string>
    <string name="txt_minute">মিনিট</string>
    <string name="txt_more_category">আরও ক্যাটাগরি</string>
    <string name="title_subscribe">নূরে সাবস্ক্রাইব করুন</string>
    <string name="des_subscribe">এক জায়গায় সমস্ত ইসলামী পরিষেবা উপভোগ করুন</string>
    <string name="txt_profile">প্রোফাইল</string>
    <string name="txt_subscribe">সাবস্ক্রাইব</string>
    <string name="cat_quran">পবিত্র কুরআন</string>
    <string name="cat_roja">রোজা</string>
    <string name="cat_dua">দোয়া</string>
    <string name="cat_hadith">হাদিস</string>
    <string name="cat_namaz_sikhha">নামাজ শিক্ষা</string>
    <string name="cat_wallpaper">ওয়ালপেপার</string>
    <string name="cat_animation">এনিমেশন</string>
    <string name="cat_ninety_nine_names_allah">আল্লাহর ৯৯ নাম</string>
    <string name="title_ninety_nine_names_allah">আল্লাহর ৯৯ নাম</string>
    <string name="cat_islamic_video">ইসলামিক ভিডিও</string>
    <string name="cat_islamic_name">ইসলামিক নাম</string>
    <string name="cat_compass">কম্পাস</string>
    <string name="cat_nearest_mosque">নিকটবর্তী মসজিদ</string>
    <string name="cat_quran_school">কুরআন স্কুল</string>
    <string name="cat_tasbih">তাসবীহ</string>
    <string name="cat_scholar_video">স্কলার ভিডিও</string>
    <string name="title_personal_tracker">ব্যক্তিগত ট্র্যাকার</string>
    <string name="txt_not_yet">এখনো না</string>
    <string name="txt_prayed">প্রার্থিত</string>
    <string name="txt_today">আপনি কি আজ</string>
    <string name="txt_pray">নামাজ পড়েছেন?</string>
    <string name="cat_instructive_video">ইসলামিক শিক্ষনীয় ভিডিও</string>
    <string name="cat_islamic_song">ইসলামিক গান</string>
    <string name="cat_donation">ডোনেশন</string>
    <string name="cat_ijtema">বিশ্ব ইজতেমা</string>
    <string name="cat_quiz">কুইজ</string>
    <string name="fajr" translatable="false">Fajr</string>
    <string name="dhuhr" translatable="false">Dhuhr</string>
    <string name="asr" translatable="false">Asr</string>
    <string name="maghrib" translatable="false">Maghrib</string>
    <string name="isha" translatable="false">Isha</string>
    <string name="play_it">প্লে করুন</string>
    <string name="pause_it">বিরতি</string>
    <string name="favourite_surah">প্রিয় সূরা</string>
    <string name="surah_list">সূরা সমূহ</string>
    <string name="fav_list">প্রিয় তালিকা</string>
    <string name="bismillah_native">বিসমিল্লাহির রহমানির রাহীম</string>
    <string name="bismillah_translation">পরম করুণাময় অতি দয়ালু আল্লাহর নামে</string>
    <string name="select_item">নির্বাচন করুন</string>
    <string name="next_surah">পরবর্তী সূরা</string>
    <string name="copy_surah">সূরা কপি করুন </string>
    <string name="share">শেয়ার করুন</string>
    <string name="favourite">ফেভারিট</string>
    <string name="play_audio">প্লে অডিও</string>
    <string name="copy_ayah">আয়াত কপি করুন </string>
    <string name="ayah">আয়াত</string>
    <string name="txt_mobile_number">মোবাইল নাম্বার</string>
    <string name="txt_save">সেভ করুন</string>
    <string name="title_near_mosque">নিকটস্থ মসজিদ</string>
    <string name="one_km_txt">১কিমি</string>
    <string name="three_km_txt">৩কিমি</string>
    <string name="five_km_text">৫কিমি</string>
    <string name="ten_km_txt">১০কিমি</string>
    <string name="txt_distance">দূরত্ব</string>
    <string name="des_near_mosque">সঠিক পরিষেবা পেতে মোবাইলের লোকেশন সার্ভিস অন রাখুন</string>
    <string name="txt_map_view">ম্যাপ ভিউ</string>
    <string name="txt_title_compass">সঠিক দিক নির্দেশনার জন্য ফোনটি ক্যালিব্রেট (Calibrate) করুন এবং লোকেশন সার্ভিস অন করুন</string>
    <string name="km_text">" কিলোমিটার"</string>
    <string name="makkah_distance">"মক্কা থেকে দূরত্ব "</string>
    <string name="degree_txt">  ভৌগলিক উত্তর থেকে</string>
    <string name="turn_on_txt">সঠিক দিক নির্দেশনা পেতে আপনার লোকেশন অন করুন</string>
    <string name="time_for_iftari">ইফতারির সময় শুরু হয়েছে</string>
    <string name="sehri_time_up">সেহরির সময় শেষ</string>
    <string name="time_left_till_ramadan">রমজানের আর বাকি আছে</string>
    <string name="only_more">মাত্র</string>
    <string name="day_meaning_v2">দিন</string>
    <string name="holy_ramadan">পবিত্র মাহে রমজান </string>
    <string name="today">আজ</string>
    <string name="evening">সন্ধ্যা</string>
    <string name="today_sehri_iftar_robi">আজকের সাহরী ও ইফতারের সময়</string>
    <string name="today_sehri_iftar_time_table_robi">সাহরী ও ইফতারের সময়সূচি </string>
    <string name="ifter_time_today">ইফতারের সময়</string>
    <string name="last_sehri_time_today">সাহরীর শেষ সময়</string>
    <string name="rahmat">রহমত</string>
    <string name="magfirat">মাগফিরাত</string>
    <string name="nazat">নাজাত</string>
    <string name="ramadan">রমজান</string>
    <string name="day">দিবস</string>
    <string name="date">তারিখ</string>
    <string name="essential_duas">প্রয়োজনীয় দোয়া সমূহ</string>
    <string name="sehri_alert">সেহরি এলার্ট</string>
    <string name="ifter_alert">ইফতার এলার্ট</string>
    <string name="notification_sound">নোটিফিকেশন সাউন্ড</string>
    <string name="notification_vibration">ভাইব্রেশন</string>
    <string name="select_district">জেলা নির্বাচন করুন</string>
    <string name="text_doa_count">টি দোয়া</string>
    <string name="category_list">ক্যাটাগরি সমূহ </string>
    <string name="hadis_list">হাদিস সমূহ</string>
    <string name="namaz_visual">নামাজ ভিজ্যুয়াল</string>
    <string name="for_men">পুরুষ</string>
    <string name="for_women">মহিলা</string>
    <string name="error_message">আপনার ইন্টারনেট পরীক্ষা করুন এবং আবার চেষ্টা করুন</string>
    <string name="previous_content">পূর্ববর্তী</string>
    <string name="next_content">পরবর্তী</string>
    <string name="retry">আবার চেষ্টা কর</string>
    <string name="no_data">কোন তথ্য নেই</string>
    <string name="download">ডাউনলোড</string>
    <string name="download_confirmation">এই ফাইলটি ডাউনলোড করুন?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="download_success">ডাউনলোড শেষ হয়েছে</string>
    <string name="name_fazilat">ফজিলত</string>
    <string name="slash">/</string>
    <string name="txt_jakat_calculator">যাকাত ক্যালকুলেটর</string>
    <string name="txt_save_calculation">হিসাব সংরক্ষণ</string>
    <string name="txt_new_calculation">নতুন হিসাব</string>
    <string name="txt_jakat_description">ইসলামে ৭.৫ ভরি স্বর্ণ কিংবা ৫২.৫ ভরি রুপা অথবা সমপরিমাণ অর্থ এক বছর যাবত গচ্ছিত থাকলে তার বাজার মুল্য অনুযায়ী মোট অর্থের শতকরা ২.৫% যাকাত দেওয়ার বিধান রয়েছে</string>
    <string name="txt_total_asset">মোট সম্পদ</string>
    <string name="txt_jakat_baki">যাকাত বাকী</string>
    <string name="txt_title_total_asset">চন্দ্র বছরে আপনার দখলে থাকা সমস্ত সম্পদের পরিমান প্রবেশ করুন:</string>
    <string name="title_nogod_taka">নগদ টাকা</string>
    <string name="title_bank_nogod_taka">ব্যাংক অ্যাকাউন্টে নগদ টাকা</string>
    <string name="title_ornament_header">সোনা রূপার পরিমান</string>
    <string name="text_gold_amount">সোনার মান (টাকায়)</string>
    <string name="text_silver_amount">রূপার মান (টাকায়)</string>
    <string name="title_investment">বিনিয়োগ</string>
    <string name="text_share_market">শেয়ার বাজার</string>
    <string name="text_other_investment">অন্যান্য বিনিয়োগ</string>
    <string name="title_asset">সম্পত্তি</string>
    <string name="text_house_rent">বাসা ভাড়া</string>
    <string name="title_business">ব্যবসা</string>
    <string name="text_nogod_business">নগদ ব্যবসা</string>
    <string name="text_product">পণ্য</string>
    <string name="txt_choose_organization">দাতব্য সংস্থা নির্বাচন করুন</string>
    <string name="description_donation">\n<br>আপনার দানকৃত অর্থ সমূহ আপনার নির্ধারিত প্রতিষ্ঠানে সরাসরি পৌঁছে যাবে।  এই দানকৃত অর্থে রবি বা অন্য কোন প্রতিষ্ঠানের কোন সম্পৃক্ততা  নেই।</br></string>
    <string name="default_content_des">content description image</string>
    <string name="names_of_male">ছেলেদের</string>
    <string name="islamic_name">ইসলামিক নাম</string>
    <string name="favourite_name">প্রিয় নাম</string>
    <string name="txt_total_count">মোট গণনা</string>
    <string name="txt_reset_count">গণনা রিসেট</string>
    <string name="reset_des">রিসেট সম্পন্ন হলে, মোট/বর্তমান গণনা রিকভার করা সম্ভব না</string>
    <string name="current_count">বর্তমান গণনা</string>
    <string name="select_a_country_cpp">Select a country</string>
    <string name="search_ccp">Search...</string>
</resources>