<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

<!-- Linear layout as parent layout-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin"
    android:background="@android:color/white"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_country_cpp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:contentDescription="@string/default_content_des"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_close" />


    </FrameLayout>





</LinearLayout>


    <!-- Edit text to allow user to type name
        of item he/she wants to search-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_ccp"
        android:hint="@string/search_ccp"
        android:padding="@dimen/standard_margin"
        android:singleLine="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        />

    <!-- List view to insert list of items-->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:id="@+id/list_view"
        />

</LinearLayout>
</layout>
