<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/txt_reset_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/txt_color_title"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgClose" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDesReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/reset_des"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/ash"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleReset" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTotalCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_43"
        android:layout_marginEnd="@dimen/standard_margin"
        android:background="@drawable/ic_bg_login_disable"
        android:text="@string/txt_total_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/txt_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesReset" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCurrentCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/small_spacing"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:background="@drawable/ic_bg_login_enable"
        android:text="@string/current_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/txt_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTotalCount" />
</androidx.constraintlayout.widget.ConstraintLayout>