<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_4"
        android:text="@string/day"
        android:textAlignment="center"
        android:textColor="@color/txt_color_black"
        android:textFontWeight="800"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tvLastTimeOfSehri"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDay"
        app:layout_constraintTop_toTopOf="@+id/tvLastTimeOfSehri" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_4"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/txt_color_black"
        android:textFontWeight="800"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastTimeOfSehri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginBottom="8dp"
        android:text="@string/last_sehri_time_today"
        android:textAlignment="center"
        android:textColor="@color/txt_color_black"
        android:textFontWeight="800"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeOfIftari"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTimeOfIftari"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginEnd="16dp"
        android:text="@string/ifter_time_today"
        android:textAlignment="center"
        android:textColor="@color/txt_color_black"
        android:textFontWeight="800"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLastTimeOfSehri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvLastTimeOfSehri"
        app:layout_constraintTop_toTopOf="@+id/tvLastTimeOfSehri" />


    <LinearLayout
        android:id="@+id/scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.20"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

