<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="@dimen/small_spacing">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/margin_12"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/txt_color_black"
        android:textFontWeight="400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="স১৩ এপ্রিল, ২০২০ |"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/black_secondary"
        android:textFontWeight="400"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabRamadanPeriod"
        style="@style/AppTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintVertical_bias="0.0"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mySaawtTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@null"
            android:text="@string/rahmat" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/ativityFeedTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@null"
            android:text="@string/magfirat" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/audioBookTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@null"
            android:text="@string/nazat" />

    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
