<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.gakk.noorlibrary.model.islamicName.IslamicName" />

        <variable
            name="itemBoy"
            type="com.gakk.noorlibrary.model.ImageFromOnline" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnDismiss"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/default_content_des"
            android:padding="@dimen/margin_12"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_close" />

        <ImageView
            android:id="@+id/ic_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/btnDismiss"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:contentDescription="@string/default_content_des"
            android:imageUrlNoProgress="@{itemBoy.fullImageUrl}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_avatar"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@{item.name.trim()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:fontFamily="sans-serif"
            tools:text="@string/names_of_male" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/meaning_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_tv"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginEnd="@dimen/standard_margin"
            android:drawablePadding="@dimen/small_spacing"
            android:text="@{item.meaning.trim()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black_secondary"
            android:fontFamily="sans-serif"
            tools:text="@string/islamic_name" />


        <RelativeLayout
            android:id="@+id/favLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/meaning_tv"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@drawable/bg_border_rounded_gray"
            android:gravity="center"
            android:padding="@dimen/small_spacing">

            <ImageButton
                android:id="@+id/btnFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/default_content_des"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_selected_favourite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewNormal5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/small_spacing"
                android:layout_toEndOf="@+id/btnFav"
                android:clickable="false"
                android:text="@string/favourite_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/txt_color_black"
                android:fontFamily="sans-serif"/>
        </RelativeLayout>

    </RelativeLayout>
</layout>